--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apexcharts": "^3.36.3",
     "axios": "^1.2.3",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "mui": "0.0.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
