--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@azure/app-configuration": "^1.3.1",
+    "@azure/identity": "^3.1.3",
     "@azure/msal-browser": "^2.32.2",
     "@azure/msal-react": "^1.5.2",
     "@emotion/react": "11.9.0",
